--- a/Kurikulum/indexx.html
+++ b/Kurikulum/indexx.html
@@ -10,11 +10,47 @@
     <div class="container">
       <div class="card">
         <div class="container-img">
-          <img src="/cake.jpe" alt="roti" />
-          <div class="description">
-            <h3>Lorem</h3>
-            <p>Rp10.000</p>
-          </div>
+          <img src="/cake.jpeg" alt="roti" />
+        </div>
+        <div class="description">
+          <h3>Lorem</h3>
+          <p>Rp10.000</p>
+        </div>
+      </div>
+      <div class="card">
+        <div class="container-img">
+          <img src="/cake.jpeg" alt="roti" />
+        </div>
+        <div class="description">
+          <h3>Lorem</h3>
+          <p>Rp10.000</p>
+        </div>
+      </div>
+      <div class="card">
+        <div class="container-img">
+          <img src="/cake.jpeg" alt="roti" />
+        </div>
+        <div class="description">
+          <h3>Lorem</h3>
+          <p>Rp10.000</p>
+        </div>
+      </div>
+      <div class="card">
+        <div class="container-img">
+          <img src="/cake.jpeg" alt="roti" />
+        </div>
+        <div class="description">
+          <h3>Lorem</h3>
+          <p>Rp10.000</p>
+        </div>
+      </div>
+      <div class="card">
+        <div class="container-img">
+          <img src="/cake.jpeg" alt="roti" />
+        </div>
+        <div class="description">
+          <h3>Lorem</h3>
+          <p>Rp10.000</p>
         </div>
       </div>
     </div>
