--- a/prjct.html/grid.html
+++ b/prjct.html/grid.html
@@ -3,24 +3,26 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/prjct.css/grid.css" />
-    <title>Grid</title>
+    <title>Document</title>
   </head>
   <body>
-    <header>
-      <h1>header</h1>
-    </header>
-    <main>
-      <h2>main</h2>
-    </main>
-    <aside>
-      <h2>aside</h2>
-    </aside>
-    <nav>
-      <h2>nav</h2>
-    </nav>
-    <footer>
-      <h2>footer</h2>
-    </footer>
+    <!DOCTYPE html>
+    <html lang="en">
+      <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <link rel="stylesheet" href="/prjct.css/grid.css" />
+        <title>grid</title>
+      </head>
+      <body>
+        <div class="container">
+          <header>header</header>
+          <aside>aside</aside>
+          <nav>nav</nav>
+          <main>main</main>
+          <footer>footer</footer>
+        </div>
+      </body>
+    </html>
   </body>
 </html>
