--- a/prjct.html/indexx.html
+++ b/prjct.html/indexx.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/Kurikulum/stylee.css" />
+    <link rel="stylesheet" href="/Kurikulum/style/stylee.css" />
     <title>Document</title>
   </head>
   <body>
