--- a/Kurikulum/html/dom2.html
+++ b/Kurikulum/html/dom2.html
@@ -8,7 +8,7 @@
     <script src="/Kurikulum/JavaScript/dom2.js" defer></script>
   </head>
   <body>
-    <h1>Belajar DOM</h1>
+    <h1>KALKULATOR<br />PEMBAGIAN</h1>
     <div class="container">
       <div class="input">
         <input type="number" name="first" id="first" />
